# intrinsic_parameterization

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  filter.py  granrunner.py  loader.py  runner.py  view_parametrization
apps/: CMakeLists.txt  cli.cpp  filter.cpp  main.cpp  random.cpp  test.cpp
cmake/: FindSuiteSparse.cmake
experiments/connectivity/: README.md  connectivity.md
iarap/: datageo.hpp  laplace.cpp  laplace.hpp
include/: adjacency.hpp  datageo.hpp  distortion_energy.hpp  energy.hpp  gauss_seidel.hpp  harmonic.hpp  iglslim.hpp  intrinsicflip.hpp  intrinsicgrad.hpp  intrinsicslim.hpp  lscm.hpp  map_to_boundary.hpp  optimize.hpp  optimize_new.hpp  parameterization.hpp  solver.hpp  store_intrinsic_mesh.hpp  svd.hpp  time.hpp  tutte.hpp
iparam/: adjacency.cpp  datageo.hpp  distortion_energy.cpp  distortion_energy.hpp  iglslim.cpp  iglslim.hpp  intrinsicflip.cpp  intrinsicflip.hpp  intrinsicgrad.cpp  intrinsicgrad.hpp  intrinsicslim.cpp  intrinsicslim.hpp  metrics.cpp  metrics.hpp  optimize.cpp  optimize.hpp  parameterization.cpp  parameterization.hpp  read_mesh.cpp  read_mesh.hpp  store_intrinsic_mesh.cpp  store_intrinsic_mesh.hpp  subdivide.hpp  svd.cpp  svd.hpp  test.cpp  test.hpp  tutte.cpp
python/: CMakeLists.txt  adjacency.cpp  conformal.cpp  create_datastructure.cpp  datastructure.cpp  harmonic.cpp  module.cpp  tutte.cpp
results/: Untitled1.ipynb  Untitled2.ipynb  buddha2_0.pgf  korsi2.ipynb  modified_file.csv  paper-Copy1.ipynb  paper.ipynb  paperold.ipynb  random.ipynb  results.csv  results_fixed.csv  results_intri.csv
results/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb  korsi2-checkpoint.ipynb
scripts/: commands.py  loader.py  main.py  reader.py  runner.py  starter.py  taskMgr.py  test.py
scripts/taskMgr/: add_task.py  main.py  taskMgr.py  view_tasks.py
src/: CMakeLists.txt  adjacency.cpp  cli.cpp  distortion_energy.cpp  energy.cpp  filter.cpp  gauss_seidel.cpp  harmonic.cpp  iglslim.cpp  intrinsicflip.cpp  intrinsicgrad.cpp  intrinsicslim.cpp  lscm.cpp  main.cpp  map_to_boundary.cpp  metrics.cpp  optimize.cpp  optimize_new.cpp  parameterization.cpp  solver.cpp  store_intrinsic_mesh.cpp  subdivide.cpp  test.cpp
src/old/: old.cpp.old  old2.cpp
